Bug 14792 - Winbind should not start if the socket path for the privileged pipe is too long
Summary: Winbind should not start if the socket path for the privileged pipe is too long
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: 4.14.4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-11 10:07 UTC by Andreas Schneider
Modified: 2021-09-07 08:24 UTC (History)
3 users (show)

See Also:


Attachments
patch for 4.15 (1.95 KB, patch)
2021-08-17 15:08 UTC, Andreas Schneider
asn: review? (jra)
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2021-08-11 10:07:33 UTC
Winbind should not start if the socket path for the privileged pipe is too long.

Patch will follow ...
Comment 1 Andreas Schneider 2021-08-17 15:08:35 UTC
Created attachment 16742 [details]
patch for 4.15
Comment 2 Ralph Böhme 2021-09-05 13:49:42 UTC
Reassigning to Jule for inclusion in 4.15.
Comment 3 Jule Anger 2021-09-06 11:55:18 UTC
Pushed to autobuild-v4-15-test.
Comment 4 Jule Anger 2021-09-07 08:24:17 UTC
This bug was referenced in samba v4-15-test.
Because of a missing "BUG: " in the commit message, the QA Contact did not automatically detect the patch.


Closing out bug report.

Thanks!